--- a/content/app.css
+++ b/content/app.css
@@ -1,3 +1,159 @@
+.back_video{
+    position: absolute;
+    width: 100vw;
+    right: 0;
+    z-index: -1;
+}
+.content{
+    text-align: center;
+}
+.content h1{
+    font-family: "Bahnschrift", monospace;
+    font-size: 120px;
+    color: #343434;
+    font-weight: 600;
+}
+
+.footer-nav {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #f0f0f0;
+    text-align: center;
+}
+.nav-link {
+    margin: 0 10px;
+    color: #343434;
+    text-decoration:none;
+}
+#portfolio {
+    margin-top: 20px;
+}
+
+.card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+.card-img-top {
+    max-height: 200px;
+    object-fit: cover;
+}
+#loadMoreBtn {
+    margin-top: 10px;
+
+}
+#services {
+    margin-top: 20px;
+}
+
+.accordion-item {
+    margin-bottom: 10px;
+}
+
+#team {
+    margin-top: 20px;
+}
+
+.card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+.card-img-top {
+    max-height: 200px;
+    object-fit: cover;
+}
+
+
+#blog {
+    margin-top: 20px;
+}
+
+.blog-article {
+    border: 1px solid #ddd;
+    background-color: whitesmoke;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+.blog-article h3 {
+    margin-bottom: 10px;
+}
+
+
+#privacyPolicy {
+    margin-top: 20px;
+}
+
+section {
+    margin-bottom: 20px;
+}
+
+h3 {
+    margin-bottom: 10px;
+}
+
+#termsOfService {
+    margin-top: 20px;
+}
+
+section {
+    margin-bottom: 20px;
+}
+
+h3 {
+    margin-bottom: 10px;
+}
+img{
+    height: 8vw;
+    width: 8vw;
+
+}
+article{
+    background: white;
+}
+
+.thumbnail {
+    width: 250px;
+    height: 250px;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.lightbox {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow: auto;
+}
+.lightbox-content {
+    display: block;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+
+    box-sizing: border-box;
+    width: 450px;
+    height: 450px;
+    max-width: 80%;
+    max-height: 80%;
+}
+.close {
+    color: white;
+    font-size: 48px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+}
+
 .input-group-addon:first-child
 {
     border-right: 0;
@@ -47,7 +203,104 @@
 .login input
 {
     background-color: white;
-    border-color: darkgrey;
+    border-color: aquamarine;
     border-radius: .4em;
     width: 100%;
 }
+
+
+#searchContainer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+
+#searchInput {
+    width: 300px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+#searchButton {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+#searchButton:hover {
+    background-color: #0056b3;
+}
+
+#searchResults {
+    margin-top: 10px;
+}
+
+
+#searchResults p {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#map {
+    height: 400px;
+    border-radius: 40px;
+}
+
+#our_info {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 40%;
+}
+
+
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+select, textarea {
+    width: 60%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button[type="submit"] {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+#messageArea {
+    background-color: #dff0d8;
+    color: #3c763d;
+    padding: 10px;
+    border: 1px solid #d6e9c6;
+    border-radius: 4px;
+    margin-bottom: 20px;
+}
+
